--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,14 +11,16 @@
 					"program": "${file}",
 					"console": "integratedTerminal",
 					"env": {
-							"PYTHONPATH": "${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_project/python/:${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_project:${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_ml"
+							//"PYTHONPATH": "${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_project/python/:${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_project:${workspaceFolder}/bazel-bin/tests/py_bark_agent_tests.runfiles/bark_ml"
+							"PYTHONPATH": "${workspaceFolder}/bazel-bin/configurations/highway/configuration.runfiles/bark_project/python/:${workspaceFolder}/bazel-bin/configurations/highway/configuration.runfiles/bark_project:${workspaceFolder}/bazel-bin/configurations/highway/configuration.runfiles/bark_ml"
 			 }
 			},
 			{
 					"name": "(gdb) Launch",
 					"type": "cppdbg",
 					"request": "launch",
-					"program": "${workspaceFolder}/bazel-bin/modules/world/tests/road_corridor_tests",
+					//"program": "${workspaceFolder}/bazel-bin/modules/world/tests/road_corridor_tests",
+					"program": "${workspaceFolder}/bazel-bin/tests/observer_tests",
 					"args": [],
 					"stopAtEntry": false,
 					"cwd": "${workspaceFolder}",
