Integrate Categorical DQN Agent

--- a/src/agents/BUILD
+++ b/src/agents/BUILD
@@ -2,6 +2,8 @@ py_library(
     name = "agents",
     srcs = ["base_agent.py",
             "sac_agent.py",
+            "cdqn_agent.py",
+            "dqn_agent.py",
             "td3_agent.py",
             "ppo_agent.py",
             "tfa_agent.py"],
