--- a/src/runners/BUILD
+++ b/src/runners/BUILD
@@ -3,6 +3,8 @@ py_library(
     srcs = ["base_runner.py",
             "tfa_runner.py",
             "ppo_runner.py",
+            "dqn_runner.py",
+            "cdqn_runner.py",
             "sac_runner.py"],
     visibility = ["//visibility:public"],
 )
