--- a/configurations/highway/config.json
+++ b/configurations/highway/config.json
@@ -231,6 +231,29 @@
           "buffer_prefetch": 3,
           "checkpoint_path": "configurations/highway/checkpoints/"
         },
+        "DQNAgent": {
+            "categorical_fc_layer_params": [300, 300, 300, 300],
+            "num_atoms": 51,
+            "learning_rate": 5e-5,
+            "target_update_tau": 0.01,
+            "target_update_period": 3,
+            "min_q_value": -10,
+            "max_q_value": 10,
+            "epsilon_greedy": 0.3,
+            "gamma": 0.995,
+            "reward_scale_factor": 3.0,
+            "gradient_clipping": 10.0, 
+            "agent_name": "dqn_agent",
+            "debug_summaries": "True",
+            "replay_buffer_capacity": 200000,
+            "max_ckpts_to_keep": 3,
+            "parallel_buffer_calls": 3,
+            "batch_size": 1024,
+            "num_parallel_environments": 30,
+            "n_step_update": 2,
+            "buffer_prefetch": 3,
+            "checkpoint_path": "configurations/highway/checkpoints/"
+          },
         "Evaluator": {
           "max_steps": 60,
           "collision_penalty": -1.0,
@@ -247,7 +270,7 @@
           "max_dist": 100.0
         },
         "Runner": {
-          "number_of_collections": 5000000,
+          "number_of_collections": 550000,
           "initial_collection_steps": 100,
           "collection_episodes_per_cycle": 1,
           "evaluate_every_n_steps": 2500,
