small test+observer changes

--- a/configurations/highway/config.json
+++ b/configurations/highway/config.json
@@ -265,9 +265,13 @@
           "normalization_enabled": true,
           "max_num_agents": 2,
           "n_nearest_agents": 5,
+          "min_theta":-3.14159,
+          "max_theta":3.14159,
+          "min_vel": 0,
           "max_vel": 30.0,
           "max_lon": 500.0,
-          "max_dist": 100.0
+          "max_dist": 100.0,
+          "distance_method": 2
         },
         "Runner": {
           "number_of_collections": 550000,
