switch to new bark version in dependencies

--- a/configurations/BUILD
+++ b/configurations/BUILD
@@ -1,9 +1,9 @@
 py_library(
     name = "bark_agent",
     srcs = ["bark_agent.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
+    deps = ["@bark_project//bark/runtime:runtime",
             "//configurations/highway:configuration"],
     visibility = ["//visibility:public"],
 )
@@ -11,8 +11,8 @@ py_library(
 py_library(
     name = "base_configuration",
     srcs = ["base_configuration.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime"],
+    deps = ["@bark_project//bark/runtime:runtime"],
     visibility = ["//visibility:public"],
 )
