--- a/configurations/ppo_gym/BUILD
+++ b/configurations/ppo_gym/BUILD
@@ -9,9 +9,9 @@ filegroup(
 py_library(
     name = "custom_evaluator",
     srcs = ["custom_evaluator.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
+    deps = ["@bark_project//bark/runtime:runtime",
             "//src/evaluators:evaluators"],
     visibility = ["//visibility:public"],
 )
@@ -19,9 +19,9 @@ py_library(
 py_library(
     name = "custom_observer",
     srcs = ["custom_observer.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
+    deps = ["@bark_project//bark/runtime:runtime",
             "//src/observers:observers"],
     visibility = ["//visibility:public"],
 )
@@ -29,26 +29,26 @@ py_library(
 py_library(
   name = "configuration_lib",
   srcs = ["configuration.py"],
-  data = ["@bark_project//python:bark.so",
+  data = ["@bark_project//bark:generate_core",
           "//tests/data:bark_data",
           ":configuration_data"],
   imports = ["../external/bark_project/python/"],
-  deps = ["@bark_project//modules/runtime:runtime",
-          "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation",
+  deps = ["@bark_project//bark/runtime:runtime",
+          "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation",
           "//src:rl_runtime",
           "//src/agents:agents",
           "//src/runners:runners",
           "//configurations:base_configuration",
           ":custom_evaluator",
           ":custom_observer",
-          "@bark_project//modules/runtime/viewer:video_renderer"],
+          "@bark_project//bark/runtime/viewer:video_renderer"],
   visibility = ["//visibility:public"],
 )
 
 py_binary(
   name = "configuration",
   srcs = ["configuration.py"],
-  data = ["@bark_project//python:bark.so",
+  data = ["@bark_project//bark:generate_core",
           "//tests/data:bark_data",
           ":configuration_data"],
   imports = ["../external/bark_project/python/"],
