--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,11 +1,11 @@
 py_test(
     name = "py_runtime_rl_tests",
     srcs = ["py_runtime_rl_tests.py"],
-    data = ["@bark_project//python:bark.so",
+    data = ["@bark_project//bark:generate_core",
             "//tests/data:bark_data"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
-            "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation",
+    deps = ["@bark_project//bark/runtime:runtime",
+            "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation",
             "//src:rl_runtime",
             "//src/agents:agents"],
     visibility = ["//visibility:public"],
@@ -14,11 +14,11 @@ py_test(
 py_test(
     name = "py_runtime_tfa_tests",
     srcs = ["py_runtime_tfa_tests.py"],
-    data = ["@bark_project//python:bark.so",
+    data = ["@bark_project//bark:generate_core",
             "//tests/data:bark_data"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
-            "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation",
+    deps = ["@bark_project//bark/runtime:runtime",
+            "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation",
             "//src:rl_runtime",
             "//src/agents:agents"],
     visibility = ["//visibility:public"],
@@ -27,11 +27,11 @@ py_test(
 py_test(
     name = "py_agent_tests",
     srcs = ["py_agent_tests.py"],
-    data = ["@bark_project//python:bark.so",
+    data = ["@bark_project//bark:generate_core",
             "//tests/data:bark_data"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
-            "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation",
+    deps = ["@bark_project//bark/runtime:runtime",
+            "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation",
             "//src:rl_runtime",
             "//src/agents:agents"],
     visibility = ["//visibility:public"],
@@ -40,11 +40,11 @@ py_test(
 py_test(
     name = "py_runner_tests",
     srcs = ["py_runner_tests.py"],
-    data = ["@bark_project//python:bark.so",
+    data = ["@bark_project//bark:generate_core",
             "//tests/data:bark_data"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
-            "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation",
+    deps = ["@bark_project//bark/runtime:runtime",
+            "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation",
             "//src:rl_runtime",
             "//src/agents:agents",
             "//src/runners:runners"],
@@ -54,11 +54,11 @@ py_test(
 py_test(
   name = "py_runtime_tests",
   srcs = ["py_runtime_tests.py"],
-  data = ["@bark_project//python:bark.so",
+  data = ["@bark_project//bark:generate_core",
           "//tests/data:bark_data"],
   imports = ["../external/bark_project/python/"],
-  deps = ["@bark_project//modules/runtime:runtime",
-          "@bark_project//modules/runtime/scenario/scenario_generation:scenario_generation"],
+  deps = ["@bark_project//bark/runtime:runtime",
+          "@bark_project//bark/runtime/scenario/scenario_generation:scenario_generation"],
 )
 
 cc_test(
@@ -67,7 +67,7 @@ cc_test(
   copts = ["-Iexternal/gtest/include"],
   deps = [
     "//src/observers:nearest_observer",
-    "@bark_project//modules/world/tests:make_test_world",
+    "@bark_project//bark/world/tests:make_test_world",
     "@gtest//:main",
   ]
 )
