--- a/src/BUILD
+++ b/src/BUILD
@@ -1,9 +1,9 @@
 py_library(
     name = "rl_runtime",
     srcs = ["rl_runtime.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
+    deps = ["@bark_project//bark/runtime:runtime",
             "//src/wrappers:wrappers",
             "//src/evaluators:evaluators",
             "//src/observers:observers"],
@@ -13,9 +13,9 @@ py_library(
 py_library(
     name = "test_env",
     srcs = ["test_env.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime",
+    deps = ["@bark_project//bark/runtime:runtime",
             "//src/wrappers:wrappers",
             "//src/evaluators:evaluators",
             "//src/observers:observers"],
