--- a/src/evaluators/BUILD
+++ b/src/evaluators/BUILD
@@ -2,8 +2,8 @@ py_library(
     name = "evaluators",
     srcs = ["goal_reached.py",
             "evaluator.py"],
-    data = ["@bark_project//python:bark.so"],
+    data = ["@bark_project//bark:generate_core"],
     imports = ["../external/bark_project/python/"],
-    deps = ["@bark_project//modules/runtime:runtime"],
+    deps = ["@bark_project//bark/runtime:runtime"],
     visibility = ["//visibility:public"],
 )
