--- a/src/wrappers/BUILD
+++ b/src/wrappers/BUILD
@@ -4,11 +4,11 @@ py_library(
 						"tfa_wrapper.py",
             "dynamic_model.py",
             "motion_primitives.py"],
-    data = ["@bark_project//python:bark.so",
+    data = ["@bark_project//bark:generate_core",
             "//python:bark_ml.so",
             "//src/commons:py_spaces"],
     imports = ["../external/bark_project/python/",
                "../../python/"],
-		deps = ["@bark_project//modules/runtime:runtime"],
+		deps = ["@bark_project//bark/runtime:runtime"],
 		visibility = ["//visibility:public"],
 )
