--- a/python/BUILD
+++ b/python/BUILD
@@ -10,6 +10,7 @@ cc_binary(
     "@python_linux//:python-lib",
     "@pybind11//:pybind11",
     "@com_github_eigen_eigen//:eigen",
+    "@libtensorflow-RL-MCTS//libtensorflow:tensorflowlib",
   ],
   linkshared = 1,
   linkstatic = 1
